waybar: load at 2dp

--- a/config/waybar/config.template
+++ b/config/waybar/config.template
@@ -157,7 +157,7 @@
   },
   "cpu": {
     "interval": 5,
-    "format": "│ {load} ",
+    "format": "│ {load:.2f} ",
     "tooltip": false
   },
   "clock": {
