tmux: unbind c-l from clear; prefix is required for clear

--- a/tmux.conf
+++ b/tmux.conf
@@ -42,11 +42,8 @@ bind-key D run-shell 'tm-lurk'
 # enter copy mode
 bind-key a copy-mode
 
-# clear terminal
-bind-key -n C-l send-keys -R C-l
-
 # clear terminal and scrollback
-bind-key \' send-keys -R C-l \; clear-history
+bind-key C-l send-keys -R C-l \; clear-history
 
 # vi copypasta mode
 set-window-option -g mode-keys vi
