tmux: rebind prefix-' for clear

--- a/tmux.conf
+++ b/tmux.conf
@@ -44,6 +44,7 @@ bind-key a copy-mode
 
 # clear terminal and scrollback
 bind-key C-l send-keys -R C-l \; clear-history
+bind-key \' send-keys -R C-l \; clear-history
 
 # vi copypasta mode
 set-window-option -g mode-keys vi
