mangohud: compact format

--- a/config/MangoHud/MangoHud.conf
+++ b/config/MangoHud/MangoHud.conf
@@ -1,23 +1,30 @@
-no_display=1
+no_display=0
 
+# full=1
 cpu_stats=1
-cpu_temp=1
+cpu_temp=0
 gpu_stats=1
-gpu_temp=1
+gpu_temp=0
 fps=1
-frame_timing=1
+frametime=0
 
-font_size=28
+frame_timing=1
+histogram=1
+
+font_scale=1.25
 font_file=/usr/share/fonts/TTF/Hack-Regular.ttf
+
+alpha=0.5
 
 gpu_color=020202
 cpu_color=020202
 engine_color=020202
-text_color=AAAAAA
-frametime_color=00AA00
+
+table_columns=2
 
 position=top-right
+cellpadding_y=0.02
 
 toggle_hud=F6
- 
+
 # vim: set filetype=sh :
