waybar: use slstatus for pulseaudio

--- a/config/waybar/config.template
+++ b/config/waybar/config.template
@@ -19,9 +19,8 @@
     "battery",
     // "network#gigantor#vpn",
     // "network#tinygod#vpn",
-    "pulseaudio",
     // always
-    "custom/slstatus",
+    "custom/slstatus", // volume (exceptional), lm_sensors
     "memory",
     "cpu",
     "clock",
@@ -112,26 +111,6 @@
     "format-disconnected": "",
     "tooltip": false
   },
-  "pulseaudio": {
-    "states": {
-      "full": 100,
-      "mid": 99
-    },
-    "format": "{format_source}│ S {volume}% ",
-    "format-full": "{format_source}",
-    "format-mid": "{format_source}│ S {volume}% ",
-    "format-muted": "{format_source}│ Mute ",
-    "format-source": "│ M {volume}% ",
-    "format-source-muted": "",
-    "on-click": "volmute",
-    "on-click-right": "volmutemic",
-    "on-scroll-up": "volraise",
-    "on-scroll-down": "vollower",
-    "on-click-middle": "pavucontrol",
-    "scroll-step": 0,
-    "smooth-scrolling-threshold": 5.0,
-    "tooltip": false
-  },
   "custom/slstatus": {
     "exec": "slstatus -s",
     "on-click": "volmute",
@@ -139,8 +118,6 @@
     "on-scroll-up": "volraise",
     "on-scroll-down": "vollower",
     "on-click-middle": "pavucontrol",
-    "scroll-step": 0,
-    "smooth-scrolling-threshold": 5.0,
     "tooltip": false
   },
   "memory": {
