way-displays: vrr off for dodgey MSI 27"

--- a/config/way-displays/cfg.yaml
+++ b/config/way-displays/cfg.yaml
@@ -19,4 +19,6 @@ MODE:
     HEIGHT: 1440
   - NAME_DESC: GIGA-BYTE TECHNOLOGY CO., LTD. M28U 21490B006081
     MAX: TRUE
+VRR_OFF:
+  - MAG274QRF-QD CA8A271A00352
 
