way-displays: rounder gigabyte scale

--- a/config/way-displays/cfg.yaml
+++ b/config/way-displays/cfg.yaml
@@ -13,6 +13,8 @@ SCALE:
     SCALE: 2
   - NAME_DESC: MAG274QRF-QD CA8A271A00352
     SCALE: 1
+  - NAME_DESC: GIGA-BYTE TECHNOLOGY CO., LTD. M28U 21490B006081
+    SCALE: 1.75
 MODE:
   - NAME_DESC: MAG274QRF-QD CA8A271A00352
     WIDTH: 2560
