--- a/tmux.conf
+++ b/tmux.conf
@@ -68,10 +68,12 @@ bind-key -T copy-mode-vi Y send-keys -X copy-line
 bind-key -T copy-mode-vi y send-keys -X copy-pipe-and-cancel "xsel --input --clipboard"
 
 # cwd to X selection; xsel will run in the background until another process wants to put to X sel
-bind-key -T prefix u run-shell "echo -n '#{pane_current_path}' | sed -e 's/ /\\\ /g' | xsel --input --primary"
+bind-key -T prefix u   run-shell "echo -n '#{pane_current_path}' | sed -e 's/ /\\\ /g' | xsel --input --primary"
+bind-key -T prefix C-u run-shell "echo -n '#{pane_current_path}' | sed -e 's/ /\\\ /g' | xsel --input --primary"
 
 # spawn terminal at cwd
 # unset TMUX so that we get a new session
 # -b causes server to own process so explicitly disown
-bind-key -T prefix e run-shell "cd '#{pane_current_path}' ; TMUX= term > /dev/null 2>&1 &\! ; exit 0"
+bind-key -T prefix e   run-shell "cd '#{pane_current_path}' ; TMUX= term > /dev/null 2>&1 &\! ; exit 0"
+bind-key -T prefix C-e run-shell "cd '#{pane_current_path}' ; TMUX= term > /dev/null 2>&1 &\! ; exit 0"
 
