way-displays: specific scale for M28U for now

--- a/config/way-displays/cfg.yaml
+++ b/config/way-displays/cfg.yaml
@@ -11,16 +11,16 @@ SCALE:
     SCALE: 1
   - NAME_DESC: LG Display 0x05EF
     SCALE: 2
-  - NAME_DESC: MAG274QRF-QD CA8A271A00352
+  - NAME_DESC: MAG274QRF-QD
     SCALE: 1
-  - NAME_DESC: GIGA-BYTE TECHNOLOGY CO., LTD. M28U 21490B006081
+  - NAME_DESC: M28U
     SCALE: 1.75
 MODE:
-  - NAME_DESC: MAG274QRF-QD CA8A271A00352
+  - NAME_DESC: MAG274QRF-QD
     WIDTH: 2560
     HEIGHT: 1440
-  - NAME_DESC: GIGA-BYTE TECHNOLOGY CO., LTD. M28U 21490B006081
+  - NAME_DESC: M28U
     MAX: TRUE
 VRR_OFF:
-  - MAG274QRF-QD CA8A271A00352
+  - MAG274QRF-QD
 
