tmux: remove X clipboard hacks

--- a/tmux.conf
+++ b/tmux.conf
@@ -53,27 +53,16 @@ set-window-option -g mode-keys vi
 bind-key i choose-tree -Zs
 bind-key x switch-client -l
 
-# X clipboard integration fails over ~91kB in alacritty and st.
-# Pipe out to xsel wherever possible, but still enable the integration for ones we can't e.g. copy-line
-set -g set-clipboard external
-
-# override default copy-selection-and-cancel to pipe
-bind-key -T copy-mode-vi C-j               send-keys -X copy-pipe-and-cancel "xsel --input --clipboard"
-bind-key -T copy-mode-vi Enter             send-keys -X copy-pipe-and-cancel "xsel --input --clipboard"
-bind-key -T copy-mode-vi MouseDragEnd1Pane send-keys -X copy-pipe-and-cancel "xsel --input --clipboard"
-
-# more vim like
+# more vim like selection
 bind-key -T copy-mode-vi v send-keys -X begin-selection
-bind-key -T copy-mode-vi Y send-keys -X copy-line
-bind-key -T copy-mode-vi y send-keys -X copy-pipe-and-cancel "xsel --input --clipboard"
+bind-key -T copy-mode-vi Y send-keys -X copy-pipe-end-of-line
 
-# cwd to X selection; xsel will run in the background until another process wants to put to X sel
-bind-key -T prefix u   run-shell "echo -n '#{pane_current_path}' | sed -e 's/ /\\\ /g' | xsel --input --primary"
-bind-key -T prefix C-u run-shell "echo -n '#{pane_current_path}' | sed -e 's/ /\\\ /g' | xsel --input --primary"
+# cwd to selection
+bind-key -T prefix u   run-shell "echo -n '#{pane_current_path}' | sed -e 's/ /\\\ /g' | wl-copy -p"
+bind-key -T prefix C-u run-shell "echo -n '#{pane_current_path}' | sed -e 's/ /\\\ /g' | wl-copy -p"
 
 # spawn terminal at cwd
 # unset TMUX so that we get a new session
-# -b causes server to own process so explicitly disown
 bind-key -T prefix e   run-shell "cd '#{pane_current_path}' ; TMUX= term > /dev/null 2>&1 &\! ; exit 0"
 bind-key -T prefix C-e run-shell "cd '#{pane_current_path}' ; TMUX= term > /dev/null 2>&1 &\! ; exit 0"
 
