mangohud: compact histogram

--- a/config/MangoHud/MangoHud.conf
+++ b/config/MangoHud/MangoHud.conf
@@ -1,15 +1,18 @@
 no_display=0
 
-# full=1
+full=0
+
 cpu_stats=1
 cpu_temp=1
 gpu_stats=1
 gpu_temp=1
 fps=1
-frametime=0
+frametime=1
 
 frame_timing=1
-histogram=0
+histogram=1
+
+hud_compact=1
 
 font_scale=1.25
 font_file=/usr/share/fonts/TTF/Hack-Regular.ttf
