waybar: vpn, battery, tmp, ram, swap, load, time -> slstatus

--- a/config/waybar/config.template
+++ b/config/waybar/config.template
@@ -8,9 +8,9 @@
     "river/window"
   ],
   "modules-center": [
-    // "network#duke",
-    // "network#gigantor#wl",
-    // "custom/rival.battery#emperor",
+    // "network#duke"
+    // "network#gigantor#wl"
+    // "custom/rival.battery#emperor"
   ],
   "modules-right": [
     // always
