tmux: unbind suspend-client

--- a/tmux.conf
+++ b/tmux.conf
@@ -67,4 +67,4 @@ bind-key -T prefix e   run-shell "cd '#{pane_current_path}' ; TMUX= term > /dev/
 bind-key -T prefix C-e run-shell "cd '#{pane_current_path}' ; TMUX= term > /dev/null 2>&1 &\! ; exit 0"
 
 # this is not useful
-tmux unbind-key C-z
+unbind-key C-z
