--- a/tmux.conf
+++ b/tmux.conf
@@ -13,6 +13,11 @@ set -g history-limit 100000
 # export these from the invoking process: the real terminal
 set -g -a update-environment ' TERM XDG_VTNR SWAYSOCK WAYLAND_DISPLAY'
 
+# OSX lacks tmux-256color, generate it at ~/.terminfo
+# https://gist.github.com/bbqtd/a4ac060d6f6b9ea6fe3aabe735aa9d95
+#  curl -LO https://invisible-island.net/datafiles/current/terminfo.src.gz && gunzip terminfo.src.gz
+#  /usr/bin/tic -xe tmux-256color terminfo.src
+
 # assume everything can handle 256color
 # overriding dynamically via, say, precmd is too expensive
 set -g default-terminal "tmux-256color"
