--- a/tmux.conf
+++ b/tmux.conf
@@ -36,10 +36,10 @@ set -s escape-time 0
 # search
 set-window-option -g wrap-search off
 
-# use screen ctrl-A prefix with ctrl-B as backup when remoting
+# use screen ctrl-A prefix with ctrl-O as backup when remoting
 unbind-key C-b
 set -g prefix C-a
-set -g prefix2 C-b
+set -g prefix2 C-o
 
 # create a lurking session
 bind-key D run-shell 'tm-lurk'
