--- a/root/etc/X11/xorg.conf.d/20-amdgpu.conf
+++ b/root/etc/X11/xorg.conf.d/20-amdgpu.conf
@@ -2,4 +2,5 @@ Section "Device"
     Identifier "AMD"
     Driver "amdgpu"
     Option "VariableRefresh" "True"
+    Option "SWCursor" "True"
 EndSection
