--- a/tmux.conf
+++ b/tmux.conf
@@ -71,5 +71,9 @@ bind-key -T prefix C-u run-shell "echo -n '#{pane_current_path}' | sed -e 's/ /\
 bind-key -T prefix e   run-shell "cd '#{pane_current_path}' ; TMUX= term > /dev/null 2>&1 &\! ; exit 0"
 bind-key -T prefix C-e run-shell "cd '#{pane_current_path}' ; TMUX= term > /dev/null 2>&1 &\! ; exit 0"
 
+# yank missing for some reason
+bind-key -T copy-mode-vi y "send-keys -X copy-selection"
+bind-key -T copy-mode-vi Y "send-keys -X copy-end-of-line"
+
 # this is not useful
 unbind-key C-z
