--- a/config/MangoHud/MangoHud.conf
+++ b/config/MangoHud/MangoHud.conf
@@ -1,33 +1,30 @@
-no_display=0
+# /usr/share/doc/mangohud/MangoHud.conf.example
 
 full=0
 
 cpu_stats=1
-cpu_temp=1
+cpu_temp=0
+cpu_power=0
+
 gpu_stats=1
-gpu_temp=1
+gpu_temp=0
 gpu_power=0
+
 fps=1
-frametime=1
+frametime=0
 
 frame_timing=1
-histogram=0
 
 hud_compact=1
+hud_no_margin=1
 
-font_scale=1
-font_file=/usr/share/fonts/TTF/Hack-Regular.ttf
+font_size=28
 
 alpha=0.5
 
-gpu_color=202020
-cpu_color=202020
-engine_color=202020
+table_columns=1
 
-table_columns=3
-
-position=top-right
-cellpadding_y=0.02
+position=top-left
 
 toggle_hud=F6
 
