--- a/config/MangoHud/MangoHud.conf
+++ b/config/MangoHud/MangoHud.conf
@@ -1,31 +1,84 @@
 # /usr/share/doc/mangohud/MangoHud.conf.example
 
+# presets.conf not available at 0.6.9.1
+
 full=0
 
+toggle_hud=F6
+
+#
+# 2 horizontal preset, from code
+#
+# horizontal=1
+# legacy_layout=0
+# fps=1
+# table_columns=20
+# frame_timing=1
+# frametime=0
+# cpu_stats=1
+# gpu_stats=1
+# ram=1
+# vram=1
+# battery=1
+# hud_no_margin=1
+# gpu_power=1
+# cpu_power=1
+# battery_watt=1
+# battery_time=1
+
+
+#
+# top left
+#
+# cpu_stats=1
+# cpu_temp=0
+# cpu_power=0
+
+# gpu_stats=1
+# gpu_temp=0
+# gpu_power=0
+
+# fps=1
+# frametime=0
+
+# frame_timing=1
+
+# hud_compact=1
+# hud_no_margin=1
+
+# font_size=28
+
+# alpha=0.5
+
+# table_columns=1
+
+# position=top-left
+
+
+#
+# horizontal
+#
+horizontal=1
+
 cpu_stats=1
-cpu_temp=0
+cpu_temp=1
 cpu_power=0
 
 gpu_stats=1
-gpu_temp=0
+gpu_temp=1
 gpu_power=0
 
 fps=1
-frametime=0
+frametime=1
 
 frame_timing=1
 
 hud_compact=1
 hud_no_margin=1
 
-font_size=28
-
 alpha=0.5
+background_alpha=0
 
-table_columns=1
-
-position=top-left
-
-toggle_hud=F6
+table_columns=20
 
 # vim: set filetype=sh :
