mangohud: less info

--- a/config/MangoHud/MangoHud.conf
+++ b/config/MangoHud/MangoHud.conf
@@ -61,15 +61,15 @@ toggle_hud=F6
 horizontal=1
 
 cpu_stats=1
-cpu_temp=1
+cpu_temp=0
 cpu_power=0
 
 gpu_stats=1
-gpu_temp=1
+gpu_temp=0
 gpu_power=0
 
 fps=1
-frametime=1
+frametime=0
 
 frame_timing=1
 
@@ -78,6 +78,8 @@ hud_no_margin=1
 
 alpha=0.5
 background_alpha=0
+
+vram_color=777777
 
 table_columns=20
 
