tmux: show pane title as status line

--- a/tmux.conf
+++ b/tmux.conf
@@ -8,7 +8,7 @@ set -g set-titles-string "#{pane_title}"
 set -g status-style bg="${PROMPT_COLOUR}",fg=black
 
 # just the title, the rest is truncated noise
-set status-format "#{pane_title}"
+set -g status-format "#{pane_title}"
 
 # moar scollback
 set -g history-limit 100000
