tmux: force alacritty RGB capabilities as it is not detected

--- a/tmux.conf
+++ b/tmux.conf
@@ -13,6 +13,12 @@ set -g status-format "#{pane_title}"
 # moar scollback
 set -g history-limit 100000
 
+# assume everything can handle 256color; linux falls back gracefully
+set -g default-terminal "tmux-256color"
+
+# 24 bit color capability is not detected from alacritty
+set -g -a terminal-overrides "alacritty:RGB"
+
 # search
 set-window-option -g wrap-search off
 
